--- a/examples/asyncio/file_scan/pyproject.toml
+++ b/examples/asyncio/file_scan/pyproject.toml
@@ -1,9 +1,17 @@
-[tool.poetry]
+[project]
 name = "filescan-examples"
 version = "2.0.0"
 description = "This is a set of examples about how to use python SDK to communicate with FileScan service"
-authors = ["H. Andres Tournour <andres.tournour@pangea.cloud>"]
+authors = [
+  {name = "H. Andres Tournour", email = "andres.tournour@pangea.cloud"}
+]
 readme = "README.md"
+requires-python = ">=3.9"
+dependencies = [
+  "pangea-sdk"
+]
+
+[tool.poetry]
 packages = [{include = "file_scan_examples"}]
 
 [tool.poetry.dependencies]
@@ -22,5 +30,5 @@ line-length = 120
 profile = "black"
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=2.0.0"]
 build-backend = "poetry.core.masonry.api"
