--- a/examples/asyncio/sanitize/pyproject.toml
+++ b/examples/asyncio/sanitize/pyproject.toml
@@ -1,10 +1,15 @@
-[tool.poetry]
+[project]
 name = "sanitize-examples"
 version = "2.0.0"
 description = "This is a set of examples about how to use python SDK to communicate with Sanitize service"
-authors = ["H. Andres Tournour <andres.tournour@pangea.cloud>"]
+authors = [
+  {name = "H. Andres Tournour", email = "andres.tournour@pangea.cloud"}
+]
 readme = "README.md"
-packages = [{include = "sanitize_examples"}]
+requires-python = ">=3.9"
+dependencies = [
+  "pangea-sdk"
+]
 
 [tool.poetry.dependencies]
 python = "^3.9.20"
@@ -22,5 +27,5 @@ line-length = 120
 profile = "black"
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=2.0.0"]
 build-backend = "poetry.core.masonry.api"
