--- a/examples/file_scan/pyproject.toml
+++ b/examples/file_scan/pyproject.toml
@@ -1,14 +1,21 @@
-[tool.poetry]
+[project]
 name = "filescan-examples"
 version = "2.0.0"
 description = "This is a set of examples about how to use python SDK to communicate with FileScan service"
-authors = ["H. Andres Tournour <andres.tournour@pangea.cloud>"]
+authors = [
+  {name = "H. Andres Tournour", email = "andres.tournour@pangea.cloud"}
+]
 readme = "README.md"
-packages = [{include = "file_scan_examples"}]
+requires-python = ">=3.9"
+dependencies = [
+  "pangea-sdk==5.2.1"
+]
+
+[tool.poetry]
+package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.9.20"
-pangea-sdk = "^5.2.1"
+python = "^3.9.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.10.0"
@@ -22,5 +29,5 @@ line-length = 120
 profile = "black"
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=2.0.0"]
 build-backend = "poetry.core.masonry.api"
