--- a/examples/intel/pyproject.toml
+++ b/examples/intel/pyproject.toml
@@ -1,9 +1,17 @@
-[tool.poetry]
+[project]
 name = "intel-examples"
 version = "2.1.0"
 description = "This is a set of examples about how to use python SDK to communicate with Intel service"
-authors = ["H. Andres Tournour <andres.tournour@pangea.cloud>"]
+authors = [
+  {name = "H. Andres Tournour", email = "andres.tournour@pangea.cloud"}
+]
 readme = "README.md"
+requires-python = ">=3.9"
+dependencies = [
+  "pangea-sdk"
+]
+
+[tool.poetry]
 packages = [{include = "intel_examples"}]
 
 [tool.poetry.dependencies]
@@ -27,5 +35,5 @@ python_version = "3.9"
 warn_unused_ignores = true
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=2.0.0"]
 build-backend = "poetry.core.masonry.api"
