--- a/examples/ai_guard/pyproject.toml
+++ b/examples/ai_guard/pyproject.toml
@@ -1,6 +1,9 @@
 [project]
 name = "ai-guard-examples"
 requires-python = ">=3.9"
+dependencies = [
+  "pangea-sdk"
+]
 
 [tool.poetry]
 package-mode = false
