--- a/packages/pangea-sdk/pyproject.toml
+++ b/packages/pangea-sdk/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pangea-sdk"
-version = "5.3.0"
+version = "5.4.0beta1"
 description = "Pangea API SDK"
 authors = [
     {name = "Glenn Gallien", email = "glenn.gallien@pangea.cloud"}
