--- a/packages/pangea-sdk/pyproject.toml
+++ b/packages/pangea-sdk/pyproject.toml
@@ -14,35 +14,23 @@ classifiers = [
     "Topic :: Software Development",
     "Topic :: Software Development :: Libraries",
 ]
-requires-python = ">=3.9"
+requires-python = ">=3.9,<4.0.0"
 dependencies = [
-  "aiohttp",
-  "cryptography",
-  "deprecated",
-  "google-crc32c",
-  "pydantic",
-  "python-dateutil",
-  "requests-toolbelt",
-  "requests",
-  "typing-extensions"
+  "aiohttp (>=3.11.11,<4.0.0)",
+  "cryptography (>=43.0.3,<44.0.0)",
+  "deprecated (>=1.2.15,<2.0.0)",
+  "google-crc32c (>=1.5.0,<2.0.0)",
+  "pydantic (>=2.10.5,<3.0.0)",
+  "python-dateutil (>=2.9.0,<3.0.0)",
+  "requests (>=2.31.0,<3.0.0)",
+  "requests-toolbelt (>=1.0.0,<2.0.0)",
+  "typing-extensions (>=4.12.2,<5.0.0)"
 ]
 
 [tool.poetry]
 packages = [
     { include = "pangea" }
 ]
-
-[tool.poetry.dependencies]
-python = "^3.9.0"
-aiohttp = "^3.11.11"
-cryptography = "^43.0.3"
-deprecated = "^1.2.15"
-google-crc32c = "^1.5.0"
-pydantic = "^2.10.5"
-python-dateutil = "^2.9.0"
-requests = "^2.31.0"
-requests-toolbelt = "^1.0.0"
-typing-extensions = "^4.12.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.10.0"
