--- a/packages/pangea-sdk/pyproject.toml
+++ b/packages/pangea-sdk/pyproject.toml
@@ -21,7 +21,7 @@ dependencies = [
   "deprecated (>=1.2.15,<2.0.0)",
   "google-crc32c (>=1.5.0,<2.0.0)",
   "pydantic (>=2.10.5,<3.0.0)",
-  "python-dateutil (>=2.9.0,<3.0.0)",
+  "python-dateutil (>=2.9.0.post0,<3.0.0)",
   "requests (>=2.31.0,<3.0.0)",
   "requests-toolbelt (>=1.0.0,<2.0.0)",
   "typing-extensions (>=4.12.2,<5.0.0)"
