Add `Redact` examples

--- a/examples/.examples-ci.yml
+++ b/examples/.examples-ci.yml
@@ -38,6 +38,7 @@
     - export PANGEA_SANITIZE_TOKEN="${PANGEA_INTEGRATION_TOKEN_LVE_AWS}"
     - export PANGEA_VAULT_TOKEN="${PANGEA_INTEGRATION_TOKEN_LVE_AWS}"
     - export PANGEA_SHARE_TOKEN="${PANGEA_INTEGRATION_TOKEN_LVE_AWS}"
+    - export PANGEA_VAULT_FPE_KEY_ID="${PANGEA_INTEGRATION_FPE_KEY_ID_LVE_AWS}"
     - !reference [.setup, update-pip]
     - !reference [.setup, update-poetry]
   rules:
