fixup! update `pangea-sdk` dependency and `poetry.lock`s

--- a/examples/asyncio/embargo/pyproject.toml
+++ b/examples/asyncio/embargo/pyproject.toml
@@ -16,7 +16,7 @@ packages = [{include = "embargo_examples"}]
 
 [tool.poetry.dependencies]
 python = "^3.9.20"
-pangea-sdk = "^5.5.1"
+pangea-sdk = { path = "../../../packages/pangea-sdk", develop = true }
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
