--- a/examples/file_scan/pyproject.toml
+++ b/examples/file_scan/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
-  "pangea-sdk==5.5.1"
+  "pangea-sdk"
 ]
 
 [tool.poetry]
@@ -16,6 +16,7 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.9.0"
+pangea-sdk = { path = "../../packages/pangea-sdk", develop = true }
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
