--- a/examples/authn/pyproject.toml
+++ b/examples/authn/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
 
 [tool.poetry.dependencies]
 python = "^3.9.20"
-pangea-sdk = "^5.5.1"
+pangea-sdk = { path = "../../packages/pangea-sdk", develop = true }
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
