--- a/packages/pangea-sdk/pyproject.toml
+++ b/packages/pangea-sdk/pyproject.toml
@@ -39,7 +39,7 @@ isort = "^6.0.1"
 mypy = "1.15.0"
 types-Deprecated = "^1.2.9.3"
 types-python-dateutil = "^2.8.19.14"
-types-requests = "^2.31.0.10"
+types-requests = "^2.32.0.20250328"
 
 [tool.black]
 line-length = 120
