--- a/examples/asyncio/ai_guard/pyproject.toml
+++ b/examples/asyncio/ai_guard/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "ai-guard-examples"
-requires-python = ">=3.9"
+requires-python = ">=3.9.2,<4.0.0"
 dependencies = [
   "pangea-sdk"
 ]
