--- a/examples/authz/pyproject.toml
+++ b/examples/authz/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.0.0"
 description = "AuthZ examples."
 authors = []
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.9.2,<4.0.0"
 dependencies = [
   "pangea-sdk"
 ]
