--- a/examples/file_scan/pyproject.toml
+++ b/examples/file_scan/pyproject.toml
@@ -6,16 +6,16 @@ authors = [
   {name = "H. Andres Tournour", email = "andres.tournour@pangea.cloud"}
 ]
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.9.2,<4.0.0"
 dependencies = [
-  "pangea-sdk==5.5.1"
+  "pangea-sdk==6.1.0"
 ]
 
 [tool.poetry]
 package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.9.0"
+python = "^3.9.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
