--- a/examples/redact/pyproject.toml
+++ b/examples/redact/pyproject.toml
@@ -6,14 +6,14 @@ authors = [
   {name = "H. Andres Tournour", email = "andres.tournour@pangea.cloud"}
 ]
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.9.2,<4.0.0"
 dependencies = [
   "pangea-sdk"
 ]
 
 [tool.poetry.dependencies]
 python = "^3.9.20"
-pangea-sdk = "^5.5.1"
+pangea-sdk = "^6.1.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
