--- a/packages/pangea-sdk/pyproject.toml
+++ b/packages/pangea-sdk/pyproject.toml
@@ -36,9 +36,11 @@ packages = [
 [tool.poetry.group.dev.dependencies]
 docstring-parser = "^0.15"
 mypy = "1.15.0"
+pytest = "8.3.5"
+pytest-asyncio = "0.26.0"
 types-Deprecated = "^1.2.9.3"
 types-python-dateutil = "^2.8.19.14"
-types-requests = "^2.31.0.10"
+types-requests = "2.32.0.20250515"
 
 [tool.mypy]
 python_version = "3.9"
@@ -53,6 +55,14 @@ plugins = ['pydantic.mypy']
 init_forbid_extra = true
 init_typed = true
 warn_required_dynamic_aliases = true
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+addopts = "--tb=short"
+xfail_strict = true
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "session"
+filterwarnings = ["error"]
 
 [build-system]
 requires = ["poetry-core>=2.1.3"]
