--- a/examples/asyncio/file_scan/pyproject.toml
+++ b/examples/asyncio/file_scan/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.9.2,<4.0.0"
 dependencies = [
-  "pangea-sdk"
+  "pangea-sdk==6.1.1"
 ]
 
 [tool.poetry]
@@ -16,10 +16,9 @@ packages = [{include = "file_scan_examples"}]
 
 [tool.poetry.dependencies]
 python = "^3.9.20"
-pangea-sdk = "^6.1.0"
 
 [tool.poetry.group.dev.dependencies]
-mypy = "^1.15.0"
+mypy = "1.15.0"
 
 [build-system]
 requires = ["poetry-core>=2.1.3"]
