--- a/examples/file_scan/pyproject.toml
+++ b/examples/file_scan/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.9.2,<4.0.0"
 dependencies = [
-  "pangea-sdk==6.1.0"
+  "pangea-sdk==6.1.1"
 ]
 
 [tool.poetry]
@@ -18,7 +18,7 @@ package-mode = false
 python = "^3.9.2"
 
 [tool.poetry.group.dev.dependencies]
-mypy = "^1.15.0"
+mypy = "1.15.0"
 
 [build-system]
 requires = ["poetry-core>=2.1.3"]
