--- a/packages/pangea-sdk/pyproject.toml
+++ b/packages/pangea-sdk/pyproject.toml
@@ -46,6 +46,7 @@ build-backend = "uv_build"
 python_version = "3.9"
 color_output = true
 error_summary = true
+implicit_reexport = false
 pretty = true
 show_column_numbers = true
 warn_unused_ignores = true
