--- a/packages/pangea-sdk/pyproject.toml
+++ b/packages/pangea-sdk/pyproject.toml
@@ -54,7 +54,7 @@ warn_unused_ignores = true
 plugins = ['pydantic.mypy']
 
 [tool.pydantic-mypy]
-init_forbid_extra = true
+init_forbid_extra = false
 init_typed = true
 warn_required_dynamic_aliases = true
 
