chore(ci): add harden-runner

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,11 @@ jobs:
   prefetch:
     runs-on: ubuntu-24.04
     steps:
+      - name: Harden runner
+        uses: step-security/harden-runner@f4a75cfd619ee5ce8d5b864b0d183aff3c69b55a # v2.13.1
+        with:
+          egress-policy: audit
+
       - name: Checkout code
         uses: actions/checkout@v5.0.0
 
@@ -51,6 +56,11 @@ jobs:
     needs: [prefetch]
     runs-on: ubuntu-24.04
     steps:
+      - name: Harden runner
+        uses: step-security/harden-runner@f4a75cfd619ee5ce8d5b864b0d183aff3c69b55a # v2.13.1
+        with:
+          egress-policy: audit
+
       - name: Checkout code
         uses: actions/checkout@v5.0.0
 
@@ -65,6 +75,11 @@ jobs:
     needs: [prefetch]
     runs-on: ubuntu-24.04
     steps:
+      - name: Harden runner
+        uses: step-security/harden-runner@f4a75cfd619ee5ce8d5b864b0d183aff3c69b55a # v2.13.1
+        with:
+          egress-policy: audit
+
       - name: Checkout code
         uses: actions/checkout@v5.0.0
 
@@ -88,6 +103,11 @@ jobs:
     needs: [prefetch]
     runs-on: ubuntu-24.04
     steps:
+      - name: Harden runner
+        uses: step-security/harden-runner@f4a75cfd619ee5ce8d5b864b0d183aff3c69b55a # v2.13.1
+        with:
+          egress-policy: audit
+
       - name: Checkout code
         uses: actions/checkout@v5.0.0
 
@@ -118,6 +138,11 @@ jobs:
       run:
         working-directory: ./packages/pangea-sdk
     steps:
+      - name: Harden runner
+        uses: step-security/harden-runner@f4a75cfd619ee5ce8d5b864b0d183aff3c69b55a # v2.13.1
+        with:
+          egress-policy: audit
+
       - name: Checkout code
         uses: actions/checkout@v5.0.0
 
@@ -148,6 +173,11 @@ jobs:
       run:
         working-directory: ./packages/pangea-sdk
     steps:
+      - name: Harden runner
+        uses: step-security/harden-runner@f4a75cfd619ee5ce8d5b864b0d183aff3c69b55a # v2.13.1
+        with:
+          egress-policy: audit
+
       - name: Checkout code
         uses: actions/checkout@v5.0.0
 
@@ -177,6 +207,11 @@ jobs:
       run:
         working-directory: ./packages/pangea-sdk
     steps:
+      - name: Harden runner
+        uses: step-security/harden-runner@f4a75cfd619ee5ce8d5b864b0d183aff3c69b55a # v2.13.1
+        with:
+          egress-policy: audit
+
       - name: Checkout code
         uses: actions/checkout@v5.0.0
 
@@ -212,6 +247,11 @@ jobs:
       run:
         working-directory: ./packages/pangea-django
     steps:
+      - name: Harden runner
+        uses: step-security/harden-runner@f4a75cfd619ee5ce8d5b864b0d183aff3c69b55a # v2.13.1
+        with:
+          egress-policy: audit
+
       - name: Checkout code
         uses: actions/checkout@v5.0.0
 
