--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,6 +1,9 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["local>pangeacyber/.github:renovate-config"],
+  "extends": [
+    "config:best-practices",
+    "local>pangeacyber/.github:renovate-config"
+  ],
   "ignorePaths": [],
   "packageRules": [
     {
